Release Note

* current
  * changed the brokerage to get all file replicas first 
  * introduced 2h of timeout for transferring user jobs
  * added proxyCache
  * added -m to reassignTask
  * including _\d+$ in hospital queues
  * using bps in getWanDataFlowMaxtrix
  * using name instead of dn for specialDispatchParams
  * added avalage file lookup time in SLS
  * added getKeyPair
  * add timing info in broker_util
  * added retryTask() to Client
  * added check_pidfile in apache-ctl	
  * using HTTP instead of HTTPS for DDM callbacks 
  * fixed SetupperAtlas to ignore DQFrozenDatasetException when making _dis
  * added support for multiple ES consumer
  * changed changeTaskPriority to propagate changes to jobs too 
  * fixed dataset lookup by file GUID to allow wildcard search
  * changed to send input/output map to the pilot for ES merge
  * removed old TAPE check for BNL from brokerage
  * disabled PandaMover for US
  * changed Adder to register log files for ES
  * changed the protection for un-formatted HC destinationDBlock
  * added setDebugMode.py
  * added a protection against un-formatted destinationDBlock for HC	
  * using specialHandling=eventservice
  * changed Setupper to have a plugin structure
  * changed the brokerage to use CVMFS check for nightlies
  * added reassignTask
  * fixed jedi_events.endEvent
  * added a build number to version name
  * added cpuConsumptionTime to updateEventRanges
  * improved format of specialHandling for ES
  * adde actualCoreCount
  * improved to update t_task.total_events
  * fixed keepJob to append attemptNr correctly
  * disabled pandamover for AGLT2
  * removed updateFileMetadataInJEDI
  * added a protection against old JEDI jobs w/o fileIDs
  * changed to update nEvents in JEDI tables
  * changed to update total_req_jobs in t_task
  * changed the brokerge to use wildcard matching for ROOT
  * fixed the brokerage for bulk file lookup
  * fixed the brokearge to accept CVMFS ROOT version format