@@ -1,6 +1,7 @@
 Release Note
 
 * current
+  * fixed file counting to merge failed jobs
   * changed the brokerage to get all file replicas first 
   * introduced 2h of timeout for transferring user jobs
   * added proxyCache
